--- a/examples/todo_app/index.html
+++ b/examples/todo_app/index.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>My TODOs</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Betal Todo - Modern Task Manager</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#8C9FF5',
+                        'primary-dark': '#6C7FD8',
+                        secondary: '#8b5cf6',
+                    }
+                }
+            }
+        }
+        
+        // Apply dark mode class before page loads to prevent flash
+        if (localStorage.getItem('darkMode') === 'true') {
+            document.documentElement.classList.add('dark');
+        }
+    </script>
     <script type="module" src="index.js"></script>
-    <link rel="stylesheet" href="index.css" />
 </head>
-<body></body>
+<body>
+    <div id="app"></div>
+</body>
 </html>
